@@ -1,4 +1,4 @@
-#nm: --undefined-only --no-sort
+#nm: --undefined-only
 #name: weakref tests, weak undefined syms
 #source: weakref1.s
 # see weakref1.d for comments on the not-targets
@@ -16,7 +16,27 @@
 #...
 .* w wc1
 #...
+.* w wh2
+#...
+.* w wh3
+#...
+.* w wh4
+#...
+.* w wh5
+#...
+.* w wh6
+#...
+.* w wh7
+#...
+.* w wm6
+#...
+.* w wm7
+#...
+.* w wm8
+#...
 .* w ww1
+#...
+.* w ww10
 #...
 .* w ww2
 #...
@@ -33,24 +53,4 @@
 .* w ww8
 #...
 .* w ww9
-#...
-.* w ww10
-#...
-.* w wm6
-#...
-.* w wm7
-#...
-.* w wm8
-#...
-.* w wh2
-#...
-.* w wh3
-#...
-.* w wh4
-#...
-.* w wh5
-#...
-.* w wh6
-#...
-.* w wh7
 #pass
