@@ -1,5 +1,5 @@
-.weakref a,b
-.weakref b,c
-.weakref c,d
-.weakref d,e
-.weakref e,a
+	.weakref a,b
+	.weakref b,c
+	.weakref c,d
+	.weakref d,e
+	.weakref e,a
